--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,30 @@
     <string name="hello_first_fragment">Hello first fragment</string>
 
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="reset">Reset</string>
+    <string name="tune">Tune</string>
+    <string name="offset">Offset</string>
+    <string name="radio">Radio</string>
+    <string name="type">Type</string>
+    <string name="battery">Battery</string>
+    <string name="battery_pin">Battery pin</string>
+    <string name="rst_pin">RST pin</string>
+    <string name="scl_pin">SCL pin</string>
+    <string name="sda_pin">SDA pin</string>
+    <string name="sonde_settings">Sonde settings</string>
+    <string name="frequency">frequency</string>
+    <string name="mhz">MHz</string>
+    <string name="toggle_buzzer">Toggle buzzer</string>
+    <string name="km">km</string>
+    <string name="no_sonde">[no sonde]</string>
+    <string name="dbm">-dBm</string>
+    <string name="menu">Menu</string>
+    <string name="center_user_in_map">Center user in map</string>
+    <string name="center_sonde_in_map">Center sonde in map</string>
+    <string name="change_map_layer">Change map layer</string>
+    <string name="launch_navigation">Launch navigation</string>
+    <string name="settings">Settings</string>
+    <string name="save">Save</string>
     <string-array name="display_types">
         <item>SSD1306</item>
         <item>SH1106</item>
