--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="launch_navigation">Launch navigation</string>
     <string name="settings">Settings</string>
     <string name="save">Save</string>
+    <string name="title_activity_scrolling">Trova la sonda</string>
     <string-array name="display_types">
         <item>SSD1306</item>
         <item>SH1106</item>
