--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="CONNECTED_TO">Connected to</string>
     <string name="BATTERY_">Battery </string>
     <string name="BY_CAR">By car: </string>
-    <string name="MAP_STYLE_SELECTED"> map style selected</string>
+    <string name="MAP_STYLE_SELECTED">map style selected</string>
     <string name="FIRMWARE_UPDATE_AVAILABLE">Firmware update available</string>
     <string name="A_NEW_VERSION_OF_THE_FIRMWARE">A new version of the firmware is available for this receiver.\nDo you want to update the receiver now?</string>
     <string name="UPDATE_NOW">Update now</string>
@@ -105,6 +105,8 @@
         <item>M10</item>
         <item>PIL</item>
         <item>DFM</item>
+        <item>C50</item>
+        <item>IMET4</item>
     </string-array>
     <string-array name="bandwidth">
         <item>2600</item>
