--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,7 +92,7 @@
     <string name="TAP_HERE_TO_CHANGE_SONDE_TYPE_FREQUENCY">Tap here to change sonde type &amp; frequency</string>
     <string name="NOTIFY_RECOVERY">Notify recovery</string>
     <string name="SEND_REPORT">Send report</string>
-    <string name="RECOVERY_REPORT">Recovery report</string>
+    <string name="SONDEHUB_REPORT">Sondehub report</string>
     <string name="USER">user</string>
     <string name="coord_closed">coord▲</string>
     <string name="coord_open">coords▼</string>
@@ -103,6 +103,11 @@
     <string name="INVALID_LATITUDE">Invalid latitude</string>
     <string name="INVALID_LONGITUDE">Invalid longitude</string>
     <string name="INVALID_ALTITUDE">Invalid altitude</string>
+    <string name="failed_try_again">Failed, try again?</string>
+    <string name="reporting_result">Reporting result:\n\n\"%1$s\"</string>
+    <string name="failed_to_send_report">Failed to send report! (%1$s)</string>
+    <string name="error_sending_report_status">Error sending report (status: %1$s)</string>
+    <string name="unknown_error">Unknown error %1$s</string>
     <string-array name="display_types">
         <item>SSD1306</item>
         <item>SH1106</item>
