adds receiver dependent sonde type list

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -99,15 +99,15 @@
     <string name="failed_to_send_report">Impossibile inviare rapporto! (%1$s)</string>
     <string name="error_sending_report_status">Errore invio rapporto (stato: %1$s)</string>
     <string name="unknown_error">Errore sconosciuto %1$s</string>
-    <string name="user_name_must_specified">Nome utente obbligatorio</string>
+    <string name="user_name_must_be_specified">Nome utente obbligatorio</string>
     <string name="please_add_a_description">Aggiungi una descrizione per favore</string>
     <string name="report_sent_successfully">Rapporto inviato con successo</string>
     <string name="settings_not_available_for_this_receiver">Impostazioni non disponibili per questo ricevitore</string>
     <string name="skip_tutorial">Salta presentazione</string>
     <string name="no_receiver_found">Ricevitore non trovato</string>
     <string name="chose_connection">Scegli la connessione</string>
-    <string name="bluetooth_classic_ttgo">Bluetooth Classic (TTGO)</string>
-    <string name="bluetooth_low_energy_heltec">Bluetooth Low Energy (Heltec)</string>
+    <string name="bluetooth_classic">Bluetooth Classic</string>
+    <string name="bluetooth_low_energy">Bluetooth Low Energy</string>
     <string name="no_receiver">Nessun ricevitore</string>
     <string name="exit">Esci</string>
     <string name="title_activity_settings">Impostazioni</string>
