--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,15 +108,15 @@
     <string name="failed_to_send_report">Failed to send report! (%1$s)</string>
     <string name="error_sending_report_status">Error sending report (status: %1$s)</string>
     <string name="unknown_error">Unknown error %1$s</string>
-    <string name="user_name_must_specified">User name must specified</string>
+    <string name="user_name_must_be_specified">User name must be specified</string>
     <string name="please_add_a_description">Please add a description</string>
     <string name="report_sent_successfully">Report sent successfully</string>
     <string name="settings_not_available_for_this_receiver">Settings not available for this receiver</string>
     <string name="skip_tutorial">Skip tutorial</string>
     <string name="no_receiver_found">No receiver found</string>
     <string name="chose_connection">Chose connection</string>
-    <string name="bluetooth_classic_ttgo">Bluetooth Classic (TTGO)</string>
-    <string name="bluetooth_low_energy_heltec">Bluetooth Low Energy (Heltec)</string>
+    <string name="bluetooth_classic">Bluetooth Classic</string>
+    <string name="bluetooth_low_energy">Bluetooth Low Energy</string>
     <string name="no_receiver">No receiver</string>
     <string name="exit">Exit</string>
     <string name="what_s_new">What\'s new</string>
