supports MySondyGO version 3 (BLE)

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -115,4 +115,5 @@
     <string name="close">Chiudi</string>
     <string name="hunting_mode_on">Modalità di caccia ATTIVA</string>
     <string name="hunting_mode_off">Modalità di caccia DISATTIVATA</string>
+    <string name="cannot_access_remote_firmware_updates_database">Impossibile accedere al database remoto dei firmware</string>
 </resources>
